# back/docs/swagger.yaml
@@ -287,4 +287,30 @@ paths:
       summary: get reservation by user
       tags:
       - Reservation
+  /reservations/isreserv/{customerId}/{eventId}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: customerId
+        in: path
+        name: customerId
+        required: true
+        type: string
+      - description: eventId
+        in: path
+        name: eventId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: Successfully get
+        "400":
+          description: Bad request
+          schema: {}
+      summary: get reservation by user
+      tags:
+      - Reservation
 swagger: "2.0"
