# back/internal/controllers/reservationController.go
@@ -8,8 +8,8 @@ import (
 
 	"net/http"
 
+	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
-	_ "gorm.io/gorm"
 )
 
 // @Summary add reservation
@@ -108,31 +108,41 @@ func GetReservationsbyUser(c echo.Context) error {
 
 }
 
-// // @Summary Check if reservation exists for a user
-// // @Description Check if a reservation exists for a specific user with given customerID and eventID
-// // @Tags Reservation
-// // @Accept json
-// // @Produce json
-// // @Param customerId path string true "Customer ID"
-// // @Param eventId path string true "Event ID"
-// // @Success 200 {object} map[string]bool{"exists":true} "Successfully checked"
-// // @Failure 400 {object} error "Bad request"
-// // @Failure 500 {object} error "Internal server error"
-// // @Router /reservations/isreserv/{customerId}/{eventId} [get]
-// func isReservByUser(c echo.Context) error {
-// 	CustomerID := c.Param("customerId")
-// 	EventID := c.Param("eventId")
-// 	var exists bool
+type SimpleReservation struct {
+	ID uuid.UUID `json:"id"`
+}
 
-// 	// Vérifie si une réservation existe avec l'event ID et l'utilisateur ID donnés
-// 	var reservation models.Reservation
-// 	if err := db.DB().First(&reservation).Where("event_id = ? AND customer_id = ?", EventID, CustomerID).Error; err != nil {
-// 		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+// @Summary get reservation by user
+// @Tags Reservation
+// @Accept json
+// @Produce json
+// @Param customerId path string true "customerId"
+// @Param eventId path string true "eventId"
+// @Success 204 "Successfully get"
+// @Failure 400 {object} error "Bad request"
+// @Failure 500 {object} error "Internal server error"
+// @Router /reservations/isreserv/{customerId}/{eventId} [get]
+// func IsReserv(c echo.Context) error {
+// 	customerID := c.Param("customerId")
+// 	eventID := c.Param("eventId")
+
+// 	var reservation []models.Reservation
+// 	if err := db.DB().Where("customer_id = ? AND event_id = ?", customerID, eventID).Find(&reservation).Error; err != nil {
+// 		// Une erreur interne s'est produite
+// 		return c.JSON(http.StatusInternalServerError, map[string]string{"error": err.Error()})
 // 	}
 
-// 	type ReservationCheckResponse struct {
-// 		Exists bool `json:"exists"`
+// 	// Si aucune réservation n'est trouvée, retourner un tableau vide
+// 	if len(reservation) == 0 {
+// 		return c.JSON(http.StatusOK, []SimpleReservation{})
 // 	}
-// 	return c.JSON(http.StatusOK, ReservationCheckResponse{Exists: exists})
 
+// 	var simpleReservation []SimpleReservation
+// 	for _, reservation := range reservations {
+// 		simpleReservation = append(simpleReservation, simpleReservation{
+// 			ID: reservation.ID,
+// 		})
+// 	}
+
+// 	return c.JSON(http.StatusOK, simpleReservation)
 // }
